--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^5.2.2"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
